# soft_h

./: LICENSE  README.md  pyproject.toml
examples/: _conf.py  examples_MNIST.ipynb  llm_entropy.ipynb
soft_entropy/: __init__.py  accumulator.py  jax.py  llm.py  numpy.py  pytorch.py  soft_entropy.R  temp_calibration.py
