[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "soft-entropy"
version = "0.1.1"
description = "GPU Accelerated soft entropy and mutual information estimator for embeddings"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "matplotlib", "torch", "jax"]
readme = "README.md"

[project.optional-dependencies]
nb  = ["jupyter"]
llm = ["transformers", "datasets", "tqdm", "accelerate"]

[tool.setuptools.packages.find]
include = ["soft_entropy*"]

